Add Payments to Person